--- a/Lab1/SourceCode/MOOC/index.html
+++ b/Lab1/SourceCode/MOOC/index.html
@@ -93,7 +93,7 @@
           <li class="dropdown-submenu">
             <a class="drop6" tabindex="-1" href="#"><img class = "icons" src="https://img.icons8.com/metro/26/000000/workers-male.png"> Engineering <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a tabindex="-1" href="#">2nd level dropdown</a></li>
+              <li><a tabindex="-1" href="Engineering.html">Engineering Page</a></li>
               <li><a tabindex="-1" href="#">2nd level dropdown</a></li>
               <li class="dropdown-submenu">
                 <a class="drop6" href="#">Another dropdown <span class="caret"></span></a>
