--- a/Lab1/SourceCode/MOOC/Engineering.html
+++ b/Lab1/SourceCode/MOOC/Engineering.html
@@ -12,7 +12,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css">
 </head>
 <body>
+<div class="topnav2">
+    <a class="active" href="index.html">Home</a>
+    <a href="Music.html">Music</a>
 
+</div>
 <div class="swiper-container">
     <div class="swiper-wrapper">
         <div class="swiper-slide">
@@ -22,23 +26,23 @@
         </div>
         <div class="swiper-slide">
             <h1 align="center">Civil Engineering</h1>
-            <img align="center" src="CivilEngineering.png">
+            <img class="center" src="CivilEngineering.png">
             <p data-swiper-parallax="-40%">The American Society of Civil Engineers (ASCE) defines civil engineering as the profession in which a knowledge of the mathematical and physical sciences gained by study, experience, and practice is applied with judgment to develop ways to utilize economically the materials and forces of nature for the progressive well-being of humanity in creating, improving and protecting the environment, in providing facilities for community living, industry and transportation, and in providing structures for the use of humankind.” The CE program aims to prepare students with a breadth and depth in the technical knowledge so they can work immediately in most areas of the profession, including geotechnical engineering; hydraulics, hydrology and water resources; structural engineering; and transportation/traffic engineering.</p>
             <p>                                  </p>
         </div>
         <div class="swiper-slide">
             <h1 align="center">Electrical Engineering</h1>
-            <img align="center" src="ElectricalEngineering.jpg">
+            <img class="center" src="ElectricalEngineering.jpg">
             <p data-swiper-parallax="-40%">Electrical and computer engineers design and build electronic circuits used in computers, automated factories, digital recording and entertaining systems. The products they design are found in robots, satellites, mobile phone systems and advanced medical tools. The rapidly changing profession – sparked by constant technological advances – demands that graduates have a varied educational background.</p>
         </div>
         <div class="swiper-slide">
             <h1 align="center">Information Technology</h1>
-            <img align="center" src="InformationTechnology.png">
+            <img class="center" src="InformationTechnology.png">
             <p data-swiper-parallax="-40%">Information technology graduates are on the cutting edge of computer operating systems, mobile applications, browsers, software and networking. They integrate computer technology and tailor it to an organization’s needs and infrastructure. Planning and managing an organization’s IT infrastructure requires a solid foundation in applied computing, as well as management and people skills.</p>
         </div>
         <div class="swiper-slide">
             <h1 align="center">Mechanical Engineering</h1>
-            <img align="center" src="MechanicalEngineering.jpg">
+            <img class="center" src="MechanicalEngineering.jpg">
             <p data-swiper-parallax="-40%">The ME program is one of the broadest of the engineering disciplines, thus, mechanical engineers are the generalists of the engineering profession. Mechanical engineers design, construct, test and operate many types of mechanical, thermal and biological devices. They are involved in almost every industry, including aerospace, automotive, bioengineering, communications, electronics, energy, food processing, HVAC, manufacturing, power generation and refrigeration, as well as business, government and academia. The ME program aims to prepare students with a breadth and depth in technical knowledge so they can work immediately in most of the areas of the profession.</p>
         </div>
     </div>
