--- a/Lab1/SourceCode/MOOC/Music.html
+++ b/Lab1/SourceCode/MOOC/Music.html
@@ -8,8 +8,9 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed|Francois+One" rel="stylesheet">
 </head>
-<body>
+<body background="media/piano.jpg">
    
 <div class="container">
   <div class = "row">
@@ -32,7 +33,13 @@
     </div>
   </div>
   <div class = 'row'>
-    <div class = "col-md-12">
+    <div class = "col-md-12" style = "text-align:center">
+      <h1 id = "catchy" class = 'blinking'>WANT A CAREER AS A PIANIST???</h1>
+      <hr style="border: dashed 1px black">
+    </div>
+
+    <div class = "col-md-12" id = 'description' style="">
+
       <p>Career success as a pianist means developing abilities and expanding possibilities as a soloist, collaborator, and teacher.
         Piano performance degrees at the bachelor, masters and doctoral levels offer pedagogy, literature, collaborative piano, and chamber music experiences to students.
         Performance opportunities are available in venues both on and off campus, and include solo recitals, chamber music and collaborative recitals, studio classes, and master classes.
@@ -56,24 +63,28 @@
         </a>
       </div>
       <div class = "col-md-4 dcontainer">
-        <a href="media/pianist.jpg"><img class = "demoImg" src="media/pianist.jpg" alt="Piano" height="42" width="42">
+        <a href="media/pianist2.jpg"><img class = "demoImg" src="media/pianist2.jpg" alt="Piano" height="42" width="42">
           <div class="middle">
             <div class="text">Click to View</div>
           </div>
         </a>
       </div>
       <div class = "col-md-4 dcontainer">
-        <a href="media/pianist.jpg"><img class = "demoImg" src="media/pianist.jpg" alt="Piano" height="42" width="42">
+        <a href="media/pianist3.jpg"><img class = "demoImg" src="media/pianist3.jpg" alt="Piano" height="42" width="42">
           <div class="middle">
             <div class="text">Click to View</div>
           </div>
         </a>
       </div>
+      <div class = 'col-md-12' style="text-align: center">
+        <br><br>
+        <iframe width="600" height="400" src="https://www.youtube.com/embed/R1QNhRNxvTI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
       <div class = "col-md-12" style="text-align: center">
         <p><button id = "registerBtn" class="w3-btn w3-khaki w3-border w3-round-xlarge w3-hover-yellow w3-xxxlarge">Click to Register NOW!</button></p>
       </div>
     </div>
-    <div class = 'col-md-12'>
+    <div class = 'col-md-12' id = "faculty">
       <p><br><hr><strong>Keyboard Faculty</strong><br />
         <br><a href="http://conservatory.umkc.edu/faculty.cfm?r=1F2FEA">Michelle Alexander, </a>Assistant Teaching Professor, Vocal Coach/Accompanist
         <br><a href="http://conservatory.umkc.edu/faculty.cfm?r=1F2EE1">Sean Chen</a>, Artist in Residence
@@ -88,27 +99,6 @@
 
 <script>
 $(document).ready(function(){
-  // set dropdown menus
-    var maxCategories = 10;
-    for (var i = 1; i<maxCategories;i++){
-        $('.dropdown-submenu a.drop' + i).on("click", function(e){
-            $(this).next('ul').toggle();
-            var currentname = $(this).attr("class").toString();
-            currentname = currentname.substr(currentname.length-1,1);
-            $(this).css('color', "blue");
-            console.log(currentname);
-            //Reset other dropdown menus
-            for (var i = 1; i<maxCategories; i++){
-                if (i != currentname){
-                    $( ".dropdown-submenu a.drop" + i ).next('ul').hide();
-                    $(".dropdown-submenu a.drop" + i ).css('color', "black");
-                }
-            }
-            //$( ".dropdown-submenu a.drop" + i ).next('ul').hide();
-            e.stopPropagation();
-            e.preventDefault();
-        });
-    }
 
 });
 </script>
