added css to index

--- a/Lab1/SourceCode/MOOC/index.html
+++ b/Lab1/SourceCode/MOOC/index.html
@@ -17,7 +17,7 @@
   <div class = "row">
     <div class="col-sm-7">
         <div style="font-family: 'Francois One', sans-serif;">
-            <h1>Welcome to UM Online University!</h1>
+            <h1 id = 'welcome'>Welcome to UM Online University!</h1>
             <p>Please take a look at the course listings below. Feel free to contact us if you have any questions!</p>
             <p>Note: We have updated our site with more interesting courses for the 2019 Spring Semester! Please check them out!</p>
         </div>
