--- a/Lab1/SourceCode/MOOC/Engineering.html
+++ b/Lab1/SourceCode/MOOC/Engineering.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css">
 </head>
 <body>
+<body background="EngineeringBackground.jpeg">
 <div class="topnav2">
     <a class="active" href="index.html">Home</a>
     <a href="Music.html">Music</a>
