--- a/Lab1/SourceCode/MOOC/Music.html
+++ b/Lab1/SourceCode/MOOC/Music.html
@@ -39,7 +39,8 @@
     </div>
 
     <div class = "col-md-12" id = 'description' style="">
-
+      <!--The information below comes from UMKC Conservatory Website and serves as a demonstration purpose only. No infringement intended.
+      Original Text Source can be found at: http://conservatory.umkc.edu/content.cfm?cont=%22%27%22D%20%0A-->
       <p>Career success as a pianist means developing abilities and expanding possibilities as a soloist, collaborator, and teacher.
         Piano performance degrees at the bachelor, masters and doctoral levels offer pedagogy, literature, collaborative piano, and chamber music experiences to students.
         Performance opportunities are available in venues both on and off campus, and include solo recitals, chamber music and collaborative recitals, studio classes, and master classes.
@@ -54,8 +55,10 @@
 
 
     </div>
+    <!--Row of demo images-->
     <div class = 'row'>
       <div class = "col-md-4 dcontainer">
+        <!--These images have been animated with css code in style.css sheet. The images are retrieved via Google Images.-->
         <a href="media/pianist.jpg"><img class = "demoImg" src="media/pianist.jpg" alt="Piano" height="42" width="42">
           <div class="middle">
             <div class="text">Click to View</div>
@@ -76,6 +79,7 @@
           </div>
         </a>
       </div>
+      <!--Youtube video insertion-->
       <div class = 'col-md-12' style="text-align: center">
         <br><br>
         <iframe width="600" height="400" src="https://www.youtube.com/embed/R1QNhRNxvTI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -99,7 +103,7 @@
 
 <script>
 $(document).ready(function(){
-
+//No actual Javascript code is needed in this page
 });
 </script>
 
