--- a/Lab1/SourceCode/MOOC/Engineering.html
+++ b/Lab1/SourceCode/MOOC/Engineering.html
@@ -18,9 +18,9 @@
     <a href="Music.html">Music</a>
 
 </div>
-<div class="swiper-container">
-    <div class="swiper-wrapper">
-        <div class="swiper-slide">
+<div align="center" class="swiper-container">
+    <div align="center" class="swiper-wrapper">
+        <div align="center" class="swiper-slide">
             <h1 align="center">Computer Science</h1>
             <img class="center" src="ComputerEngineering.jpg">
             <p data-swiper-parallax="-40%">Computer scientists design and build software, send data over networks, store information in databases, solve cybersecurity problems and address challenges in wireless and handheld devices, robotics and computer vision. Students leave SCE with a foundation in algorithmic thinking and modeling. They graduate to a robust job market that will experience growth into the next decade, according to the U.S. Bureau of Labor Statistics.</p>
