--- a/Lab1/SourceCode/MOOC/Engineering.html
+++ b/Lab1/SourceCode/MOOC/Engineering.html
@@ -16,7 +16,8 @@
 <div class="topnav2">
     <a class="active" href="index.html">Home</a>
     <a href="Music.html">Music</a>
-
+    <a href="Engineering.html">Engineering</a>
+    <a href="Liberal Science.html">Specialized Graduate Programs</a>
 </div>
 <div align="center" class="swiper-container">
     <div align="center" class="swiper-wrapper">
