adding final images and page descriptions

--- a/Lab1/SourceCode/MOOC/Engineering.html
+++ b/Lab1/SourceCode/MOOC/Engineering.html
@@ -15,9 +15,14 @@
 <body background="EngineeringBackground.jpeg">
 <div class="topnav2">
     <a class="active" href="index.html">Home</a>
+    <a href="">Login</a>
+    <a href="">Order</a>
     <a href="Music.html">Music</a>
     <a href="Engineering.html">Engineering</a>
     <a href="Liberal Science.html">Specialized Graduate Programs</a>
+</div>
+<div class="navy-background">
+    <p>UMKC School of Computing and Engineering (SCE) is Kansas City’s only accredited school for engineering and computer science. We welcome students from across the nation and around the world to join us in the pursuit of high-quality educational experiences and extracurricular activities that help shape the professionals they become.</p>
 </div>
 <div align="center" class="swiper-container">
     <div align="center" class="swiper-wrapper">
