--- a/Lab1/SourceCode/MOOC/Liberal Science.html
+++ b/Lab1/SourceCode/MOOC/Liberal Science.html
@@ -15,10 +15,14 @@
 <body background="EngineeringBackground.jpeg">
 <div class="topnav2">
     <a class="active" href="index.html">Home</a>
+    <a href="">Login</a>
+    <a href="">Order</a>
     <a href="Music.html">Music</a>
     <a href="Engineering.html">Engineering</a>
     <a href="Liberal Science.html">Specialized Graduate Programs</a>
-
+</div>
+<div class="navy-background">
+    <p>UMKC offers a variety of different graduate level programs from multiple different disciplines. On this page you will find an overview of the most popular graduate programs available at UMKC</p>
 </div>
 <div align="center" class="swiper-container">
     <div align="center" class="swiper-wrapper">
