Linked second page to home page

--- a/Lab1/SourceCode/MOOC/index.html
+++ b/Lab1/SourceCode/MOOC/index.html
@@ -82,7 +82,12 @@
               <li><a tabindex="-1" href="#">Electricial Engineering</a></li>
             </ul>
           </li>
+          <li class="dropdown-submenu">
+          <a class="drop5" tabindex="-1" href="#"><img class = "icons" src="https://img.icons8.com/metro/26/000000/books.png"> Specialized Graduate Programs <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a tabindex="-1" href="Liberal%20Science.html">Main Page</a></li>
         </ul>
+          </li>
       </div>
     </div>
     <!--Search Bar does not actually bind to any JS code. Just a mockup-->
